--- a/Styles/Stylesheets.css
+++ b/Styles/Stylesheets.css
@@ -1,13 +1,14 @@
 body{
-    background-image: url("https://www.pngarts.com/files/6/Confetti-Transparent-Background-PNG.png");
+    background-color: palegreen;
 }
 
 #container{
     display: flex;
     flex-direction: column;
-    align-items: centre;
+    align-items: center;
 }
+
 #card-element{
-    width: 100px;
-    height: 500px;
+    width: 50rem; 
+    margin-top: 5%;
 }
