--- a/Styles/Stylesheets.css
+++ b/Styles/Stylesheets.css
@@ -16,7 +16,7 @@ ul {
     text-decoration: none;
   }
   
-  li a.active {
+  li a:active {
     background-color: purple;
     color: white;
   }
@@ -58,3 +58,63 @@ ul {
     a {
       color: hotpink;
     }
+
+    div.galler {
+      border: 1px solid #ccc;
+    }
+    
+    div.galler:hover {
+      border: 1px solid #777;
+    }
+    
+    div.galler img {
+      width: 100%;
+      height: auto;
+    }
+    
+    div.desc {
+      padding: 15px;
+      text-align: center;
+    }
+    
+    * {
+      box-sizing: border-box;
+    }
+    
+    .responsive {
+      padding: 0 6px;
+      float: right;
+      width: 24.99999%;
+    }
+    
+    @media only screen and (max-width: 700px) {
+      .responsive {
+        width: 49.99999%;
+        margin: 6px 0;
+      }
+    }
+    
+    @media only screen and (max-width: 500px) {
+      .responsive {
+        width: 100%;
+      }
+    }
+    
+    .clearfix:after {
+      content: "";
+      display: table;
+      clear: both;
+    }
+    h2{
+      float: right;
+    }
+  p{
+    float: left;
+    ;
+  }
+  h1{
+    float: right;
+  }
+  h3{
+    float: right;
+  }
